More initial work
Add options page, further templating work, fix for short page height

--- a/assets/sass/_wp-classes.scss
+++ b/assets/sass/_wp-classes.scss
@@ -40,3 +40,16 @@
   @extend .sr-only;
   @extend .sr-only-focusable;
 }
+.tagcloud a {
+  display: inline-block;
+  margin-right: 5px;
+}
+.widget_calendar table {
+  width: 100%
+}
+.widget_meta ul {
+  @extend .list-unstyled;
+}
+.comment-reply-link {
+  @extend .label, .label-default;
+}
