--- a/templates/shared/base.twig
+++ b/templates/shared/base.twig
@@ -1,3 +1,4 @@
+{% spaceless %}
 <!doctype html>
 <!--[if lt IE 7]><html class="no-js ie ie6 lt-ie9 lt-ie8 lt-ie7" {{site.language_attributes}}> <![endif]-->
 <!--[if IE 7]><html class="no-js ie ie7 lt-ie9 lt-ie8" {{site.language_attributes}}> <![endif]-->
@@ -20,7 +21,7 @@
       <div class="container">
         <div class="row">
           <section id="content" role="main" class="page-content">
-            {% if title %}<h1>{{title}}</h1>{% endif %}
+            {% if title %}<h1 class="page-header thin-top">{{title}}</h1>{% endif %}
             <div class="wrapper {{sidebar_class}}">
               {% block content %}
                 Sorry, no content
@@ -37,3 +38,4 @@
     {% endblock %}
   </body>
 </html>
+{% endspaceless %}
