--- a/assets/sass/_page.scss
+++ b/assets/sass/_page.scss
@@ -12,6 +12,7 @@ body:not(.home) {
 
 .page-content {
   @media screen and (min-width: $screen-sm-min) {
+    box-shadow: 2px 2px 0px rgba(0,0,0,0.6);
     margin: {
       top: 40px;
       bottom: 40px;
@@ -40,4 +41,10 @@ body:not(.home) {
     top: 15px;
     bottom: 15px;
   }
+}
+
+.blog-comment {
+  padding-top: 15px;
+  border: 0;
+  border-top: 1px solid $hr-border;
 }
