--- a/templates/tease-post.twig
+++ b/templates/tease-post.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
   <h2 class="h2"><a href="{{post.link}}">{{post.title}}</a></h2>
+    <small>{{post.post_date|date}}</small>
     <p>{{post.get_preview(25)}}</p>
     {% if post.thumbnail.src %}
       <img src="{{post.thumbnail.src}}" />
