--- a/assets/sass/_page.scss
+++ b/assets/sass/_page.scss
@@ -1,10 +1,11 @@
 body:not(.home) {
   @media screen and (min-width: $screen-sm-min) {
     background: {
-      image: url('../images/logo.png');
+      color: darken($body-bg, 10);
+      image: url('../images/logo.svg');
       size: cover;
       attachment: fixed;
-      position: center center;
+      position: 30% center;
       repeat: no-repeat;
     }
   }
