--- a/templates/options.twig
+++ b/templates/options.twig
@@ -1,31 +1,6 @@
+<h1><span class="dashicons dashicons-admin-generic"></span> {{ title }}</h1>
 <form action="{{ form_action }}" method="post">
-<div class="wrap">
-  <div id="icon-options-general" class="icon32"></div>
-  <h2>{{ title }}</h2>
-  <div id="poststuff">
-    <div id="post-body" class="metabox-holder columns-2">
-      <!-- main content -->
-      <div id="post-body-content">
-        <div class="meta-box-sortables ui-sortable">
-          <div class="postbox">
-          <div class="inside">{{ do_settings_sections( slug ) }}</div>
-          </div>
-        </div> <!-- .meta-box-sortables .ui-sortable -->
-      </div> <!-- post-body-content -->
-      <!-- sidebar -->
-      <div id="postbox-container-1" class="postbox-container">
-        <div class="meta-box-sortables">
-          <div class="postbox">
-            <h3><span>Sidebar Content Header</span></h3>
-            <div class="inside">
-              {{submit_button|raw}}
-            </div> <!-- .inside -->
-          </div> <!-- .postbox -->
-        </div> <!-- .meta-box-sortables -->
-      </div> <!-- #postbox-container-1 .postbox-container -->
-    </div> <!-- #post-body .metabox-holder .columns-2 -->
-    <br class="clear">
-  </div> <!-- #poststuff -->
-</div> <!-- .wrap -->
+{{ do_settings_sections( slug ) }}
+{{submit_button|raw}}
 {{settings_fields( slug )}}
 </form>
