Add an option to show/hide widgets on the front page
The widget area was not being used, and looked unprofessional, so
added a checkbox option to the options page that will show/hide
the widgets.

--- a/templates/front-page.twig
+++ b/templates/front-page.twig
@@ -49,13 +49,15 @@
   {% endblock %}
 
   {% block section3 %}
-  <section class="home-section" id="widgets">
-    <div class="container">
-      <h2 class="sr-only">{{strings.moreNews}}</h2>
-      <div class="row">
-        {{widgets}}
+    {% if show_widget_area %}
+    <section class="home-section" id="widgets">
+      <div class="container">
+        <h2 class="sr-only">{{strings.moreNews}}</h2>
+        <div class="row">
+          {{widgets}}
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+    {% endif %}
   {% endblock %}
 {% endblock %}
